.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:58:50 **** Rebuild of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
Info: Nothing to build for Trees
15:26:28 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
In file included from ..\src\trees.h:11:0,
                 from ..\src\Trees.cpp:9:
..\src\node.h: In member function 'node* Trees::getNode(int)':
..\src\node.h:15:6: error: 'int node::data' is private
  int data;
      ^
In file included from ..\src\Trees.cpp:9:0:
..\src\trees.h:37:8: error: within this context
  temp->data = data;
        ^
15:27:41 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
15:30:13 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
In file included from ..\src\Trees.cpp:9:0:
..\src\trees.h:51:34: error: invalid use of non-static data member 'Trees::root'
 void Trees::inOrder(node *temp = root){
                                  ^
..\src\trees.h:14:8: note: declared here
  node *root;
        ^
15:31:22 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
15:31:36 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
15:40:03 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
15:56:59 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
16:16:36 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
16:26:40 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
18:37:01 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
18:43:23 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
Info: Nothing to build for Trees
Info: Nothing to build for Trees
18:46:26 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
18:47:37 **** Incremental Build of configuration Release for project Trees ****
Info: Internal Builder is used for build
g++ -O3 -Wall -c -fmessage-length=0 -o "src\\Trees.o" "..\\src\\Trees.cpp" 
g++ -o Trees.exe "src\\Trees.o" 
